--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.5",
+    "@angular-eslint/builder": "^19.3.0",
+    "@angular-eslint/schematics": "^19.3.0",
     "@angular/cli": "^17.3.5",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
